load("//bazel:copts.bzl", "entt_copts")

cc_test(
    name = "algorithm",
    srcs = ["algorithm.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "family",
    srcs = ["family.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "hashed_string",
    srcs = ["hashed_string.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "ident",
    srcs = ["ident.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "monostate",
    srcs = ["monostate.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "type_traits",
    srcs = ["type_traits.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "utility",
    srcs = ["utility.cpp"],
    copts = entt_copts,
    deps = [
        "//:entt",
        "@com_google_googletest//:gtest_main",
    ],
)
